<resources>
    <string name="app_name">Travel Perfect</string>
    <string name="btn_discard">Discard</string>
    <string name="google_search_text">You can search your next trip destination with Google</string>
    <string name="plain_search_text">You can just type your next destination</string>
    <string name="label_departure">Departure</string>
    <string name="label_return">Return</string>
    <string name="btn_add_departure">Add Departure</string>
    <string name="btn_add_return">Add Return</string>
    <string name="label_number_of">Number</string>
    <string name="label_name">Name</string>
    <string name="error_required_field">This is a required field</string>
    <string name="label_name_of_place">Where are you going?</string>
    <string name="label_or">or</string>
    <string name="dialog_delete_message">Are you sure you want to delete this trip?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip"><u>Skip</u></string>
    <string name="label_status">Status</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_empty_screen">You don\'t have any trips yet. Click on the + icon in the corner on the bottom to add a new one.</string>

    <string name="appwidget_text">Travel Perfect</string>
    <string name="choose_your_trip">Select the trip you want to add to your homescreen:</string>
    <string name="widget_no_trips_message">You don\'t have any trips yet</string>
    <string name="add_widget">Add widget</string>
    <string name="hint_no_items_for_trip">You don\'t have anything pending to do for this trip</string>
    <string name="btn_save">Save</string>
    <string name="btn_add_reminder">Add Reminder</string>

    <string name="plural_day_singular">Day</string>
    <string name="plural_day_plurals">Days</string>
    <string name="plural_hour_singular">Hour</string>
    <string name="plural_hour_plurals">Hours</string>
    <string name="reminder_text">You\'ll be reminded at %s</string>
    <string name="reminder_no_done_yet">You are at %d%% for this trip. You only need to prepare following things:</string>
    <string name="reminder_you_are_all_done">You are all done! Have a nice trip!</string>

    <plurals name="day">
        <item quantity="zero">@string/plural_day_plurals</item>
        <item quantity="one">@string/plural_day_singular</item>
        <item quantity="other">@string/plural_day_plurals</item>
    </plurals>

    <plurals name="hour">
        <item quantity="zero">@string/plural_hour_plurals</item>
        <item quantity="one">@string/plural_hour_singular</item>
        <item quantity="other">@string/plural_hour_plurals</item>
    </plurals>
</resources>
