<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="@dimen/fragment_content_padding">

    <include
        layout="@layout/dates_section"/>

    <Button
        android:id="@+id/add_reminder"
        style="@style/AppTheme.ButtonWithImage"
        android:drawableStart="@drawable/ic_add_colored"
        android:text="@string/btn_add_reminder"/>

    <TextView
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:visibility="gone"
        tools:text="I'm a reminder"
        tools:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/label_number_of"/>

        <TextView
            style="@style/AppTheme.Label"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:text="@string/label_name"/>

        <TextView
            style="@style/AppTheme.Label"
            android:text="@string/label_status"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_separator"
        android:animateLayoutChanges="true"
        android:orientation="vertical"/>

</LinearLayout>