<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:baselineAligned="false"
	android:orientation="horizontal"
	tools:showIn="@layout/fragment_detail_with_card_view">
	
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="vertical">
		
		<TextView
			style="@style/AppTheme.Label"
			android:text="@string/label_departure"/>
		
		<include
			android:id="@+id/departure_date"
			layout="@layout/date_view"/>
		
		<include
			android:id="@+id/departure_time"
			layout="@layout/time_view"/>
	
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="end"
		android:orientation="vertical">
		
		<TextView
			style="@style/AppTheme.Label"
			android:gravity="end"
			android:text="@string/label_return"/>
		
		<TextView
			android:id="@+id/return_date"
			style="@style/AppTheme.TextWithImage"
			android:background="@drawable/selection_bg"
			android:drawableEnd="@drawable/ic_calendar"
			tools:text="12.12.201"/>
		
		<TextView
			android:id="@+id/return_time"
			style="@style/AppTheme.TextWithImage"
			android:background="@drawable/selection_bg"
			android:drawableEnd="@drawable/ic_clock"
			tools:text="12:12"/>
		
		<Button
			android:id="@+id/return_add"
			style="@style/AppTheme.ButtonWithImage"
			android:drawableStart="@drawable/ic_add_colored"
			android:text="@string/btn_add_return"/>
	</LinearLayout>
</LinearLayout>
		
		