<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wizardBackground1">
	
	
	<android.support.v7.widget.CardView
		android:id="@+id/place_container"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginTop="@dimen/wizard_image_text_separator">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:padding="@dimen/frame_padding">
			
			<fragment
				android:id="@+id/place_autocomplete_fragment"
				android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/frame_padding"
				android:text="@string/google_search_text"
				android:textSize="12sp"/>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/widget_padding"
				android:layout_marginTop="@dimen/widget_padding"
				android:text="@string/label_or"
				android:textAllCaps="true"
				android:textSize="20sp"/>
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/plain_search_text"
				android:textSize="12sp"/>
			
			<EditText
				android:id="@+id/plain_name_of_place"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:inputType="text"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>
	
	
	<ImageView
		android:id="@+id/img"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/place_container"
		android:layout_centerHorizontal="true"
		app:srcCompat="@drawable/ic_beach_access"/>
	
	<include
		layout="@layout/wizard_button_bar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/ideal_touch_size"
		android:layout_alignParentBottom="true"/>
</RelativeLayout>